ci: update to NodeJS v20 during CI
This is not what we want long-term.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,6 +26,10 @@ jobs:
     executor: nodejs
     resource_class: xlarge
     steps:
+      - run:
+          name: Install NodeJS v20
+          command: |
+            curl -sLo- https://nodejs.org/dist/v20.14.0/node-v20.14.0-linux-x64.tar.xz | sudo tar -xJf - -C /usr/local --strip-components=1
       - checkout-and-install
       - run:
           name: Build
@@ -51,6 +55,10 @@ jobs:
     executor: nodejs
     resource_class: xlarge
     steps:
+      - run:
+          name: Install NodeJS v20
+          command: |
+            curl -sLo- https://nodejs.org/dist/v20.14.0/node-v20.14.0-linux-x64.tar.xz | sudo tar -xJf - -C /usr/local --strip-components=1
       - checkout-and-install
       - run:
           name: Build
@@ -74,6 +82,10 @@ jobs:
     executor: nodejs-browsers
     resource_class: xlarge
     steps:
+      - run:
+          name: Install NodeJS v20
+          command: |
+            curl -sLo- https://nodejs.org/dist/v20.14.0/node-v20.14.0-linux-x64.tar.xz | sudo tar -xJf - -C /usr/local --strip-components=1
       - checkout-and-install
       - run:
           name: Install Browser
@@ -104,6 +116,10 @@ jobs:
     executor: nodejs
     resource_class: xlarge
     steps:
+      - run:
+          name: Install NodeJS v20
+          command: |
+            curl -sLo- https://nodejs.org/dist/v20.14.0/node-v20.14.0-linux-x64.tar.xz | sudo tar -xJf - -C /usr/local --strip-components=1
       - checkout-and-install
       - run:
           name: Build
@@ -129,6 +145,10 @@ jobs:
     executor: nodejs
     resource_class: xlarge
     steps:
+      - run:
+          name: Install NodeJS v20
+          command: |
+            curl -sLo- https://nodejs.org/dist/v20.14.0/node-v20.14.0-linux-x64.tar.xz | sudo tar -xJf - -C /usr/local --strip-components=1
       - checkout-and-install
       - run:
           name: Build
@@ -152,6 +172,10 @@ jobs:
     executor: nodejs-browsers
     resource_class: xlarge
     steps:
+      - run:
+          name: Install NodeJS v20
+          command: |
+            curl -sLo- https://nodejs.org/dist/v20.14.0/node-v20.14.0-linux-x64.tar.xz | sudo tar -xJf - -C /usr/local --strip-components=1
       - checkout-and-install
       - run:
           name: Install Browser
@@ -182,6 +206,10 @@ jobs:
     executor: nodejs
     resource_class: xlarge
     steps:
+      - run:
+          name: Install NodeJS v20
+          command: |
+            curl -sLo- https://nodejs.org/dist/v20.14.0/node-v20.14.0-linux-x64.tar.xz | sudo tar -xJf - -C /usr/local --strip-components=1
       - checkout-and-install
       - run:
           name: Build
@@ -207,6 +235,10 @@ jobs:
     executor: nodejs
     resource_class: xlarge
     steps:
+      - run:
+          name: Install NodeJS v20
+          command: |
+            curl -sLo- https://nodejs.org/dist/v20.14.0/node-v20.14.0-linux-x64.tar.xz | sudo tar -xJf - -C /usr/local --strip-components=1
       - checkout-and-install
       - run:
           name: Build
@@ -230,6 +262,10 @@ jobs:
     executor: nodejs
     resource_class: xlarge
     steps:
+      - run:
+          name: Install NodeJS v20
+          command: |
+            curl -sLo- https://nodejs.org/dist/v20.14.0/node-v20.14.0-linux-x64.tar.xz | sudo tar -xJf - -C /usr/local --strip-components=1
       - checkout-and-install
       - run:
           name: Build
@@ -255,6 +291,10 @@ jobs:
     executor: nodejs
     resource_class: xlarge
     steps:
+      - run:
+          name: Install NodeJS v20
+          command: |
+            curl -sLo- https://nodejs.org/dist/v20.14.0/node-v20.14.0-linux-x64.tar.xz | sudo tar -xJf - -C /usr/local --strip-components=1
       - checkout-and-install
       - run:
           name: Build
@@ -278,6 +318,10 @@ jobs:
     executor: nodejs-browsers
     resource_class: xlarge
     steps:
+      - run:
+          name: Install NodeJS v20
+          command: |
+            curl -sLo- https://nodejs.org/dist/v20.14.0/node-v20.14.0-linux-x64.tar.xz | sudo tar -xJf - -C /usr/local --strip-components=1
       - checkout-and-install
       - run:
           name: Install Browser
@@ -308,6 +352,10 @@ jobs:
     executor: nodejs
     resource_class: xlarge
     steps:
+      - run:
+          name: Install NodeJS v20
+          command: |
+            curl -sLo- https://nodejs.org/dist/v20.14.0/node-v20.14.0-linux-x64.tar.xz | sudo tar -xJf - -C /usr/local --strip-components=1
       - checkout-and-install
       - run:
           name: Build
@@ -333,6 +381,10 @@ jobs:
     executor: nodejs
     resource_class: xlarge
     steps:
+      - run:
+          name: Install NodeJS v20
+          command: |
+            curl -sLo- https://nodejs.org/dist/v20.14.0/node-v20.14.0-linux-x64.tar.xz | sudo tar -xJf - -C /usr/local --strip-components=1
       - checkout-and-install
       - run:
           name: Build
@@ -356,6 +408,10 @@ jobs:
     executor: nodejs-browsers
     resource_class: xlarge
     steps:
+      - run:
+          name: Install NodeJS v20
+          command: |
+            curl -sLo- https://nodejs.org/dist/v20.14.0/node-v20.14.0-linux-x64.tar.xz | sudo tar -xJf - -C /usr/local --strip-components=1
       - checkout-and-install
       - run:
           name: Install Browser
@@ -386,6 +442,10 @@ jobs:
     executor: nodejs
     resource_class: xlarge
     steps:
+      - run:
+          name: Install NodeJS v20
+          command: |
+            curl -sLo- https://nodejs.org/dist/v20.14.0/node-v20.14.0-linux-x64.tar.xz | sudo tar -xJf - -C /usr/local --strip-components=1
       - checkout-and-install
       - run:
           name: Build
@@ -411,6 +471,10 @@ jobs:
     executor: nodejs
     resource_class: xlarge
     steps:
+      - run:
+          name: Install NodeJS v20
+          command: |
+            curl -sLo- https://nodejs.org/dist/v20.14.0/node-v20.14.0-linux-x64.tar.xz | sudo tar -xJf - -C /usr/local --strip-components=1
       - checkout-and-install
       - run:
           name: Build
@@ -434,6 +498,10 @@ jobs:
     executor: nodejs
     resource_class: xlarge
     steps:
+      - run:
+          name: Install NodeJS v20
+          command: |
+            curl -sLo- https://nodejs.org/dist/v20.14.0/node-v20.14.0-linux-x64.tar.xz | sudo tar -xJf - -C /usr/local --strip-components=1
       - checkout-and-install
       - run:
           name: Build
@@ -457,6 +525,10 @@ jobs:
     executor: nodejs
     resource_class: xlarge
     steps:
+      - run:
+          name: Install NodeJS v20
+          command: |
+            curl -sLo- https://nodejs.org/dist/v20.14.0/node-v20.14.0-linux-x64.tar.xz | sudo tar -xJf - -C /usr/local --strip-components=1
       - checkout-and-install
       - run:
           name: Build
@@ -480,6 +552,10 @@ jobs:
     executor: nodejs
     resource_class: xlarge
     steps:
+      - run:
+          name: Install NodeJS v20
+          command: |
+            curl -sLo- https://nodejs.org/dist/v20.14.0/node-v20.14.0-linux-x64.tar.xz | sudo tar -xJf - -C /usr/local --strip-components=1
       - checkout-and-install
       - run:
           name: Build
@@ -503,6 +579,10 @@ jobs:
     executor: nodejs
     resource_class: xlarge
     steps:
+      - run:
+          name: Install NodeJS v20
+          command: |
+            curl -sLo- https://nodejs.org/dist/v20.14.0/node-v20.14.0-linux-x64.tar.xz | sudo tar -xJf - -C /usr/local --strip-components=1
       - checkout-and-install
       - run:
           name: Build
@@ -526,6 +606,10 @@ jobs:
     executor: nodejs
     resource_class: xlarge
     steps:
+      - run:
+          name: Install NodeJS v20
+          command: |
+            curl -sLo- https://nodejs.org/dist/v20.14.0/node-v20.14.0-linux-x64.tar.xz | sudo tar -xJf - -C /usr/local --strip-components=1
       - checkout-and-install
       - run:
           name: Build
@@ -549,6 +633,10 @@ jobs:
     executor: nodejs
     resource_class: xlarge
     steps:
+      - run:
+          name: Install NodeJS v20
+          command: |
+            curl -sLo- https://nodejs.org/dist/v20.14.0/node-v20.14.0-linux-x64.tar.xz | sudo tar -xJf - -C /usr/local --strip-components=1
       - checkout-and-install
       - run:
           name: Build
@@ -574,6 +662,10 @@ jobs:
     executor: nodejs
     resource_class: xlarge
     steps:
+      - run:
+          name: Install NodeJS v20
+          command: |
+            curl -sLo- https://nodejs.org/dist/v20.14.0/node-v20.14.0-linux-x64.tar.xz | sudo tar -xJf - -C /usr/local --strip-components=1
       - checkout-and-install
       - run:
           name: Build
@@ -597,6 +689,10 @@ jobs:
     executor: nodejs
     resource_class: xlarge
     steps:
+      - run:
+          name: Install NodeJS v20
+          command: |
+            curl -sLo- https://nodejs.org/dist/v20.14.0/node-v20.14.0-linux-x64.tar.xz | sudo tar -xJf - -C /usr/local --strip-components=1
       - checkout-and-install
       - run:
           name: Build
@@ -622,6 +718,10 @@ jobs:
     executor: nodejs
     resource_class: xlarge
     steps:
+      - run:
+          name: Install NodeJS v20
+          command: |
+            curl -sLo- https://nodejs.org/dist/v20.14.0/node-v20.14.0-linux-x64.tar.xz | sudo tar -xJf - -C /usr/local --strip-components=1
       - checkout-and-install
       - run:
           name: Build
@@ -645,6 +745,10 @@ jobs:
     executor: nodejs
     resource_class: xlarge
     steps:
+      - run:
+          name: Install NodeJS v20
+          command: |
+            curl -sLo- https://nodejs.org/dist/v20.14.0/node-v20.14.0-linux-x64.tar.xz | sudo tar -xJf - -C /usr/local --strip-components=1
       - checkout-and-install
       - run:
           name: Build
@@ -668,6 +772,10 @@ jobs:
     executor: nodejs
     resource_class: xlarge
     steps:
+      - run:
+          name: Install NodeJS v20
+          command: |
+            curl -sLo- https://nodejs.org/dist/v20.14.0/node-v20.14.0-linux-x64.tar.xz | sudo tar -xJf - -C /usr/local --strip-components=1
       - checkout-and-install
       - run:
           name: Build
@@ -691,6 +799,10 @@ jobs:
     executor: nodejs
     resource_class: xlarge
     steps:
+      - run:
+          name: Install NodeJS v20
+          command: |
+            curl -sLo- https://nodejs.org/dist/v20.14.0/node-v20.14.0-linux-x64.tar.xz | sudo tar -xJf - -C /usr/local --strip-components=1
       - checkout-and-install
       - run:
           name: Build
@@ -714,6 +826,10 @@ jobs:
     executor: nodejs
     resource_class: xlarge
     steps:
+      - run:
+          name: Install NodeJS v20
+          command: |
+            curl -sLo- https://nodejs.org/dist/v20.14.0/node-v20.14.0-linux-x64.tar.xz | sudo tar -xJf - -C /usr/local --strip-components=1
       - checkout-and-install
       - run:
           name: Build
@@ -737,6 +853,10 @@ jobs:
     executor: nodejs
     resource_class: xlarge
     steps:
+      - run:
+          name: Install NodeJS v20
+          command: |
+            curl -sLo- https://nodejs.org/dist/v20.14.0/node-v20.14.0-linux-x64.tar.xz | sudo tar -xJf - -C /usr/local --strip-components=1
       - checkout-and-install
       - run:
           name: Build
@@ -760,6 +880,10 @@ jobs:
     executor: nodejs
     resource_class: xlarge
     steps:
+      - run:
+          name: Install NodeJS v20
+          command: |
+            curl -sLo- https://nodejs.org/dist/v20.14.0/node-v20.14.0-linux-x64.tar.xz | sudo tar -xJf - -C /usr/local --strip-components=1
       - checkout-and-install
       - run:
           name: Build
@@ -783,6 +907,10 @@ jobs:
     executor: nodejs
     resource_class: xlarge
     steps:
+      - run:
+          name: Install NodeJS v20
+          command: |
+            curl -sLo- https://nodejs.org/dist/v20.14.0/node-v20.14.0-linux-x64.tar.xz | sudo tar -xJf - -C /usr/local --strip-components=1
       - checkout-and-install
       - run:
           name: Build
@@ -806,6 +934,10 @@ jobs:
     executor: nodejs
     resource_class: xlarge
     steps:
+      - run:
+          name: Install NodeJS v20
+          command: |
+            curl -sLo- https://nodejs.org/dist/v20.14.0/node-v20.14.0-linux-x64.tar.xz | sudo tar -xJf - -C /usr/local --strip-components=1
       - checkout-and-install
       - run:
           name: Build
@@ -829,6 +961,10 @@ jobs:
     executor: nodejs
     resource_class: xlarge
     steps:
+      - run:
+          name: Install NodeJS v20
+          command: |
+            curl -sLo- https://nodejs.org/dist/v20.14.0/node-v20.14.0-linux-x64.tar.xz | sudo tar -xJf - -C /usr/local --strip-components=1
       - checkout-and-install
       - run:
           name: Build
@@ -852,6 +988,10 @@ jobs:
     executor: nodejs
     resource_class: xlarge
     steps:
+      - run:
+          name: Install NodeJS v20
+          command: |
+            curl -sLo- https://nodejs.org/dist/v20.14.0/node-v20.14.0-linux-x64.tar.xz | sudo tar -xJf - -C /usr/local --strip-components=1
       - checkout-and-install
       - run:
           name: Build
@@ -875,6 +1015,10 @@ jobs:
     executor: nodejs
     resource_class: xlarge
     steps:
+      - run:
+          name: Install NodeJS v20
+          command: |
+            curl -sLo- https://nodejs.org/dist/v20.14.0/node-v20.14.0-linux-x64.tar.xz | sudo tar -xJf - -C /usr/local --strip-components=1
       - checkout-and-install
       - run:
           name: Build
@@ -898,6 +1042,10 @@ jobs:
     executor: nodejs
     resource_class: xlarge
     steps:
+      - run:
+          name: Install NodeJS v20
+          command: |
+            curl -sLo- https://nodejs.org/dist/v20.14.0/node-v20.14.0-linux-x64.tar.xz | sudo tar -xJf - -C /usr/local --strip-components=1
       - checkout-and-install
       - run:
           name: Build
@@ -921,6 +1069,10 @@ jobs:
     executor: nodejs
     resource_class: xlarge
     steps:
+      - run:
+          name: Install NodeJS v20
+          command: |
+            curl -sLo- https://nodejs.org/dist/v20.14.0/node-v20.14.0-linux-x64.tar.xz | sudo tar -xJf - -C /usr/local --strip-components=1
       - checkout-and-install
       - run:
           name: Build
@@ -944,6 +1096,10 @@ jobs:
     executor: nodejs
     resource_class: xlarge
     steps:
+      - run:
+          name: Install NodeJS v20
+          command: |
+            curl -sLo- https://nodejs.org/dist/v20.14.0/node-v20.14.0-linux-x64.tar.xz | sudo tar -xJf - -C /usr/local --strip-components=1
       - checkout-and-install
       - run:
           name: Build
@@ -967,6 +1123,10 @@ jobs:
     executor: nodejs
     resource_class: xlarge
     steps:
+      - run:
+          name: Install NodeJS v20
+          command: |
+            curl -sLo- https://nodejs.org/dist/v20.14.0/node-v20.14.0-linux-x64.tar.xz | sudo tar -xJf - -C /usr/local --strip-components=1
       - checkout-and-install
       - run:
           name: Build
@@ -990,6 +1150,10 @@ jobs:
     executor: nodejs
     resource_class: xlarge
     steps:
+      - run:
+          name: Install NodeJS v20
+          command: |
+            curl -sLo- https://nodejs.org/dist/v20.14.0/node-v20.14.0-linux-x64.tar.xz | sudo tar -xJf - -C /usr/local --strip-components=1
       - checkout-and-install
       - run:
           name: Build
@@ -1013,6 +1177,10 @@ jobs:
     executor: nodejs
     resource_class: xlarge
     steps:
+      - run:
+          name: Install NodeJS v20
+          command: |
+            curl -sLo- https://nodejs.org/dist/v20.14.0/node-v20.14.0-linux-x64.tar.xz | sudo tar -xJf - -C /usr/local --strip-components=1
       - checkout-and-install
       - run:
           name: Build
@@ -1036,6 +1204,10 @@ jobs:
     executor: nodejs
     resource_class: xlarge
     steps:
+      - run:
+          name: Install NodeJS v20
+          command: |
+            curl -sLo- https://nodejs.org/dist/v20.14.0/node-v20.14.0-linux-x64.tar.xz | sudo tar -xJf - -C /usr/local --strip-components=1
       - checkout-and-install
       - run:
           name: Build
@@ -1059,6 +1231,10 @@ jobs:
     executor: nodejs
     resource_class: xlarge
     steps:
+      - run:
+          name: Install NodeJS v20
+          command: |
+            curl -sLo- https://nodejs.org/dist/v20.14.0/node-v20.14.0-linux-x64.tar.xz | sudo tar -xJf - -C /usr/local --strip-components=1
       - checkout-and-install
       - run:
           name: Build
@@ -1082,6 +1258,10 @@ jobs:
     executor: nodejs
     resource_class: xlarge
     steps:
+      - run:
+          name: Install NodeJS v20
+          command: |
+            curl -sLo- https://nodejs.org/dist/v20.14.0/node-v20.14.0-linux-x64.tar.xz | sudo tar -xJf - -C /usr/local --strip-components=1
       - checkout-and-install
       - run:
           name: Build
@@ -1107,6 +1287,10 @@ jobs:
     executor: nodejs
     resource_class: xlarge
     steps:
+      - run:
+          name: Install NodeJS v20
+          command: |
+            curl -sLo- https://nodejs.org/dist/v20.14.0/node-v20.14.0-linux-x64.tar.xz | sudo tar -xJf - -C /usr/local --strip-components=1
       - checkout-and-install
       - run:
           name: Build
@@ -1130,6 +1314,10 @@ jobs:
     executor: nodejs
     resource_class: xlarge
     steps:
+      - run:
+          name: Install NodeJS v20
+          command: |
+            curl -sLo- https://nodejs.org/dist/v20.14.0/node-v20.14.0-linux-x64.tar.xz | sudo tar -xJf - -C /usr/local --strip-components=1
       - checkout-and-install
       - run:
           name: Build
@@ -1153,6 +1341,10 @@ jobs:
     executor: nodejs
     resource_class: xlarge
     steps:
+      - run:
+          name: Install NodeJS v20
+          command: |
+            curl -sLo- https://nodejs.org/dist/v20.14.0/node-v20.14.0-linux-x64.tar.xz | sudo tar -xJf - -C /usr/local --strip-components=1
       - checkout-and-install
       - run:
           name: Build
@@ -1176,6 +1368,10 @@ jobs:
     executor: nodejs
     resource_class: xlarge
     steps:
+      - run:
+          name: Install NodeJS v20
+          command: |
+            curl -sLo- https://nodejs.org/dist/v20.14.0/node-v20.14.0-linux-x64.tar.xz | sudo tar -xJf - -C /usr/local --strip-components=1
       - checkout-and-install
       - run:
           name: Build
@@ -1199,6 +1395,10 @@ jobs:
     executor: nodejs
     resource_class: xlarge
     steps:
+      - run:
+          name: Install NodeJS v20
+          command: |
+            curl -sLo- https://nodejs.org/dist/v20.14.0/node-v20.14.0-linux-x64.tar.xz | sudo tar -xJf - -C /usr/local --strip-components=1
       - checkout-and-install
       - run:
           name: Build
@@ -1222,6 +1422,10 @@ jobs:
     executor: nodejs
     resource_class: xlarge
     steps:
+      - run:
+          name: Install NodeJS v20
+          command: |
+            curl -sLo- https://nodejs.org/dist/v20.14.0/node-v20.14.0-linux-x64.tar.xz | sudo tar -xJf - -C /usr/local --strip-components=1
       - checkout-and-install
       - run:
           name: Build
@@ -1245,6 +1449,10 @@ jobs:
     executor: nodejs
     resource_class: xlarge
     steps:
+      - run:
+          name: Install NodeJS v20
+          command: |
+            curl -sLo- https://nodejs.org/dist/v20.14.0/node-v20.14.0-linux-x64.tar.xz | sudo tar -xJf - -C /usr/local --strip-components=1
       - checkout-and-install
       - run:
           name: Build
