--- a/libs/custom-paper-handler/tsconfig.json
+++ b/libs/custom-paper-handler/tsconfig.json
@@ -20,6 +20,7 @@
     { "path": "../../libs/message-coder/tsconfig.build.json" },
     { "path": "../../libs/fixtures/tsconfig.build.json" },
     { "path": "../../libs/image-utils/tsconfig.build.json" },
+    { "path": "../../libs/image-utils-rs/tsconfig.build.json" },
     { "path": "../../libs/test-utils/tsconfig.build.json" },
     { "path": "../../libs/types/tsconfig.build.json" },
     { "path": "../../libs/utils/tsconfig.build.json" },
