HMPB: Add metadata line to footer
Motivation:
- Make it easier to match a printed ballot to its election
  package by printing the election hash on the ballot
- Provide a way for poll workers (who are only guaranteed to read
  English) to figure out which languages are on a given ballot (e.g.
when handing a ballot to a voter).
- Remove the precinct from the header to save vertical space. This
  isn't relevant to a voter, but may be relevant to election workers.
- Add the ballot style for good measure, since that's the last piece of
  metadata in the QR code that's currently not printed anywhere. I don't
have a particular use case in mind, but thought it might be handy.

--- a/libs/hmpb/tsconfig.json
+++ b/libs/hmpb/tsconfig.json
@@ -25,6 +25,7 @@
     { "path": "../fs/tsconfig.build.json" },
     { "path": "../image-utils/tsconfig.build.json" },
     { "path": "../types/tsconfig.build.json" },
-    { "path": "../ui/tsconfig.build.json" }
+    { "path": "../ui/tsconfig.build.json" },
+    { "path": "../utils/tsconfig.build.json" }
   ]
 }
