--- a/libs/hmpb/package.json
+++ b/libs/hmpb/package.json
@@ -41,6 +41,7 @@
     "@votingworks/fixtures": "workspace:*",
     "@votingworks/types": "workspace:*",
     "@votingworks/ui": "workspace:*",
+    "@votingworks/utils": "workspace:*",
     "buffer": "^6.0.3",
     "debug": "4.3.4",
     "js-sha256": "^0.9.0",
