--- a/libs/hmpb/tsconfig.build.json
+++ b/libs/hmpb/tsconfig.build.json
@@ -15,6 +15,7 @@
     { "path": "../eslint-plugin-vx/tsconfig.build.json" },
     { "path": "../fixtures/tsconfig.build.json" },
     { "path": "../types/tsconfig.build.json" },
-    { "path": "../ui/tsconfig.build.json" }
+    { "path": "../ui/tsconfig.build.json" },
+    { "path": "../utils/tsconfig.build.json" }
   ]
 }
