support FAI 100 controller and PAT input

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 resolver = "2"
 members = [
   "apps/mark-scan/accessible-controller",
+  "apps/mark-scan/fai-100-controller",
   "apps/mark-scan/daemon-utils",
   "apps/mark-scan/pat-device-input",
   "libs/ballot-interpreter",
