test(ballot-interpreter): generate BMD ballots on demand

--- a/libs/ballot-interpreter/package.json
+++ b/libs/ballot-interpreter/package.json
@@ -64,9 +64,12 @@
     "@types/jest-image-snapshot": "^6.4.0",
     "@types/node": "16.18.23",
     "@types/node-quirc": "workspace:*",
+    "@types/react": "18.3.3",
     "@types/tmp": "0.2.4",
     "@votingworks/fs": "workspace:*",
     "@votingworks/hmpb": "workspace:*",
+    "@votingworks/printing": "workspace:*",
+    "@votingworks/ui": "workspace:*",
     "cargo-cp-artifact": "^0.1",
     "esbuild": "0.21.2",
     "esbuild-runner": "2.2.2",
@@ -78,6 +81,7 @@
     "jest-junit": "^16.0.0",
     "jest-watch-typeahead": "^2.2.2",
     "lint-staged": "11.0.0",
+    "react": "18.3.1",
     "sort-package-json": "^1.50.0",
     "ts-jest": "29.1.1"
   },
