--- a/libs/types/package.json
+++ b/libs/types/package.json
@@ -41,6 +41,7 @@
     "@antongolub/iso8601": "^1.2.1",
     "@votingworks/basics": "workspace:*",
     "js-sha256": "^0.9.0",
+    "lodash.setwith": "^4.3.2",
     "util": "^0.12.4",
     "zod": "3.23.5"
   },
@@ -49,6 +50,7 @@
     "@types/kiosk-browser": "workspace:*",
     "@types/lodash.clonedeep": "^4.5.9",
     "@types/lodash.set": "^4.3.7",
+    "@types/lodash.setwith": "^4.3.9",
     "@types/node": "16.18.23",
     "@types/react": "18.3.3",
     "@votingworks/cdf-schema-builder": "workspace:*",
