--- a/apps/scan/backend/package.json
+++ b/apps/scan/backend/package.json
@@ -11,7 +11,7 @@
     "schema.sql"
   ],
   "scripts": {
-    "build": "tsc --build tsconfig.build.json",
+    "build": "tsc --build tsconfig.build.json && copyfiles -u 2 src/printing/test-print.pdf build/printing",
     "clean": "rm -rf build tsconfig.tsbuildinfo tsconfig.build.tsbuildinfo",
     "format": "prettier '**/*.+(css|graphql|json|less|md|mdx|sass|scss|yaml|yml)' --write",
     "lint": "pnpm type-check && eslint .",
@@ -59,6 +59,7 @@
     "@votingworks/utils": "workspace:*",
     "buffer": "^6.0.3",
     "canvas": "2.11.2",
+    "copyfiles": "^2.4.1",
     "debug": "4.3.4",
     "express": "4.18.2",
     "fs-extra": "11.1.1",
