--- a/apps/scan/backend/package.json
+++ b/apps/scan/backend/package.json
@@ -41,6 +41,7 @@
     "@votingworks/backend": "workspace:*",
     "@votingworks/ballot-interpreter": "workspace:*",
     "@votingworks/basics": "workspace:*",
+    "@votingworks/bmd-ballot-fixtures": "workspace:*",
     "@votingworks/converter-nh-accuvote": "workspace:*",
     "@votingworks/custom-scanner": "workspace:*",
     "@votingworks/db": "workspace:*",
