--- a/apps/scan/backend/tsconfig.json
+++ b/apps/scan/backend/tsconfig.json
@@ -22,6 +22,7 @@
     { "path": "../../../libs/ballot-interpreter/tsconfig.build.json" },
     { "path": "../../../libs/basics/tsconfig.build.json" },
     { "path": "../../../libs/backend/tsconfig.build.json" },
+    { "path": "../../../libs/bmd-ballot-fixtures/tsconfig.build.json" },
     { "path": "../../../libs/converter-nh-accuvote/tsconfig.build.json" },
     { "path": "../../../libs/custom-scanner/tsconfig.build.json" },
     { "path": "../../../libs/db/tsconfig.build.json" },
