--- a/apps/central-scan/backend/package.json
+++ b/apps/central-scan/backend/package.json
@@ -77,6 +77,7 @@
     "@types/supertest": "^2.0.10",
     "@types/tmp": "0.2.4",
     "@types/uuid": "9.0.5",
+    "@votingworks/bmd-ballot-fixtures": "workspace:*",
     "esbuild": "0.21.2",
     "esbuild-runner": "2.2.2",
     "eslint-plugin-vx": "workspace:*",
