--- a/apps/central-scan/backend/tsconfig.json
+++ b/apps/central-scan/backend/tsconfig.json
@@ -22,6 +22,7 @@
     { "path": "../../../libs/ballot-interpreter/tsconfig.build.json" },
     { "path": "../../../libs/basics/tsconfig.build.json" },
     { "path": "../../../libs/backend/tsconfig.build.json" },
+    { "path": "../../../libs/bmd-ballot-fixtures/tsconfig.build.json" },
     { "path": "../../../libs/db/tsconfig.build.json" },
     { "path": "../../../libs/dev-dock/backend/tsconfig.build.json" },
     { "path": "../../../libs/eslint-plugin-vx/tsconfig.build.json" },
