--- a/apps/scan/frontend/Makefile
+++ b/apps/scan/frontend/Makefile
@@ -5,7 +5,10 @@ FORCE:
 install:
 
 build: FORCE
-	pnpm install && pnpm --dir ../../../libs/ballot-interpreter build && pnpm build
+	pnpm install && \
+		pnpm --dir ../../../libs/ballot-interpreter build && \
+		pnpm --dir ../../../libs/pdi-scanner build && \
+		pnpm build
 
 bootstrap: install build
 
