chore(deps): update to `typescript` v5.5.3
See the release notes here: https://devblogs.microsoft.com/typescript/announcing-typescript-5-5/

I updated the few places I could easily find where we can benefit from TS v5.5's new ability to automatically infer type narrowing functions (e.g. better `filter` type narrowing). We also may benefit from a tooling perspective in the future if we turn on `isolatedDeclarations`, but this isn't straightforward to do right now.

--- a/libs/ballot-encoder/tsconfig.json
+++ b/libs/ballot-encoder/tsconfig.json
@@ -4,6 +4,7 @@
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
     "lib": ["dom", "dom.iterable", "esnext"],
+    "skipLibCheck": true,
     "module": "node16",
     "moduleResolution": "node16",
     "noUnusedParameters": true,
