--- a/libs/converter-nh-accuvote/package.json
+++ b/libs/converter-nh-accuvote/package.json
@@ -35,6 +35,7 @@
     "js-sha256": "^0.9.0",
     "jsdom": "20.0.1",
     "luxon": "^3.0.0",
+    "pdf-lib": "^1.17.1",
     "tmp": "^0.2.1",
     "zod": "3.14.4"
   },
