--- a/libs/auth/certs/openssl.cnf
+++ b/libs/auth/certs/openssl.cnf
@@ -47,7 +47,8 @@ tsa_policy3 = 1.2.3.4.5.7
 component = 1.3.6.1.4.1.59817.1
 jurisdiction = 1.3.6.1.4.1.59817.2
 cardType = 1.3.6.1.4.1.59817.3
-electionHash = 1.3.6.1.4.1.59817.4
+electionId = 1.3.6.1.4.1.59817.4
+electionDate = 1.3.6.1.4.1.59817.5
 
 ####################################################################
 [ ca ]
