--- a/libs/logging/log_event_details.toml
+++ b/libs/logging/log_event_details.toml
@@ -422,7 +422,7 @@ restrictInDocumentationToApps = ["vx-central-scan-frontend"]
 [ScanAdjudicationInfo]
 eventId = "scan-adjudication-info"
 eventType = "application-status"
-documentationMessage = "Information about a ballot sheet that needs adjudication from the user. The possible unresolvable errors are InvalidTestModePage when a test mode ballot is seen when scanning in live mode or vice versa, InvalidElectionHashPage when a sheet for the wrong election is seen, InvalidPrecinctPage when a sheet for an invalid precinct is seen, UnreadablePage for a sheet that is unrecognizable as either a HMPB or BMD ballot, and BlankPage for a blank sheet. Warnings that the user can choose to tabulate with a ballot include MarginalMark, Overvote, Undervote, and BlankBallot (a ballot where there are no votes for any contest)."
+documentationMessage = "Information about a ballot sheet that needs adjudication from the user. The possible unresolvable errors are InvalidTestModePage when a test mode ballot is seen when scanning in live mode or vice versa, InvalidBallotHashPage when a sheet for the wrong election is seen, InvalidPrecinctPage when a sheet for an invalid precinct is seen, UnreadablePage for a sheet that is unrecognizable as either a HMPB or BMD ballot, and BlankPage for a blank sheet. Warnings that the user can choose to tabulate with a ballot include MarginalMark, Overvote, Undervote, and BlankBallot (a ballot where there are no votes for any contest)."
 restrictInDocumentationToApps = ["vx-central-scan-frontend"]
 
 [ScannerConfigReloaded]
