[MarkScan] Update public-facing name to VxMark

--- a/libs/logging/log_event_details.toml
+++ b/libs/logging/log_event_details.toml
@@ -594,7 +594,7 @@ restrictInDocumentationToApps = ["vx-mark-scan-backend"]
 [PatDeviceError]
 eventId = "pat-device-error"
 eventType = "system-status"
-documentationMessage = "VxMarkScan encountered an error with the built-in PAT device port or the device itself"
+documentationMessage = "VxMark encountered an error with the built-in PAT device port or the device itself"
 restrictInDocumentationToApps = ["vx-mark-scan-backend"]
 
 [PaperHandlerStateChanged]
