fix something went wrong printing test page

--- a/apps/scan/frontend/Makefile
+++ b/apps/scan/frontend/Makefile
@@ -8,6 +8,7 @@ build: FORCE
 	pnpm install && \
 		pnpm --dir ../../../libs/ballot-interpreter build && \
 		pnpm --dir ../../../libs/pdi-scanner build && \
+		pnpm --dir ../backend build && \
 		pnpm build
 
 bootstrap: install build
