--- a/.env
+++ b/.env
@@ -20,3 +20,4 @@ REACT_APP_VX_ENABLE_CLOUD_TRANSLATION_AND_SPEECH_SYNTHESIS=FALSE
 REACT_APP_VX_CONVERTER=ms-sems
 REACT_APP_VX_ONLY_ENABLE_SCREEN_READER_FOR_HEADPHONES=TRUE
 REACT_APP_VX_MARK_SCAN_ENABLE_BALLOT_REINSERTION=FALSE
+REACT_APP_VX_MARK_SCAN_USE_BMD_150=TRUE
