Script to add metadata text to back pages of ballot PDF
To help with matching front to back when printing ballots at scale

--- a/libs/converter-nh-accuvote/package.json
+++ b/libs/converter-nh-accuvote/package.json
@@ -20,6 +20,7 @@
   },
   "packageManager": "pnpm@8.1.0",
   "dependencies": {
+    "@pdf-lib/fontkit": "^1.1.1",
     "@votingworks/ballot-interpreter": "workspace:*",
     "@votingworks/basics": "workspace:*",
     "@votingworks/hmpb-layout": "workspace:*",
