--- a/libs/fixtures/data/systemSettings.json
+++ b/libs/fixtures/data/systemSettings.json
@@ -13,5 +13,7 @@
   },
   "centralScanAdjudicationReasons": [],
   "precinctScanAdjudicationReasons": [],
-  "precinctScanDisallowCastingOvervotes": false
+  "precinctScanDisallowCastingOvervotes": false,
+  "castVoteRecordOptimizationExcludeOriginalSnapshots": true,
+  "castVoteRecordOptimizationExcludeRedundantMetadata": true
 }
