--- a/libs/hmpb/package.json
+++ b/libs/hmpb/package.json
@@ -57,6 +57,7 @@
     "@types/debug": "4.1.8",
     "@types/jest": "^29.5.3",
     "@types/node": "16.18.23",
+    "@types/pixelmatch": "^5.2.6",
     "@types/react": "18.3.3",
     "@types/react-dom": "18.3.0",
     "@types/styled-components": "^5.1.26",
@@ -69,10 +70,10 @@
     "eslint-plugin-vx": "workspace:*",
     "is-ci-cli": "2.2.0",
     "jest": "^29.6.2",
-    "jest-image-matcher": "^3.0.1",
     "jest-junit": "^16.0.0",
     "jest-watch-typeahead": "^2.2.2",
     "lint-staged": "11.0.0",
+    "pixelmatch": "^6.0.0",
     "sort-package-json": "^1.50.0",
     "tmp": "^0.2.1",
     "ts-jest": "29.1.1",
