--- a/libs/image-utils/package.json
+++ b/libs/image-utils/package.json
@@ -25,7 +25,9 @@
     "@votingworks/utils": "workspace:*",
     "canvas": "2.11.2",
     "debug": "4.3.4",
+    "jest-image-snapshot": "^6.4.0",
     "pdfjs-dist": "2.3.200",
+    "pixelmatch": "^5.3.0",
     "tmp": "^0.2.1"
   },
   "lint-staged": {
@@ -46,6 +48,7 @@
     "@types/jest-image-snapshot": "^6.4.0",
     "@types/node": "16.18.23",
     "@types/pdfjs-dist": "2.1.3",
+    "@types/pixelmatch": "^5.2.6",
     "@types/tmp": "0.2.4",
     "esbuild": "0.21.2",
     "esbuild-runner": "2.2.2",
@@ -53,7 +56,6 @@
     "fast-check": "2.23.2",
     "is-ci-cli": "2.2.0",
     "jest": "^29.6.2",
-    "jest-image-snapshot": "^6.4.0",
     "jest-junit": "^16.0.0",
     "jest-watch-typeahead": "^2.2.2",
     "lint-staged": "11.0.0",
