style(rust): fix issues flagged by clippy in Rust 1.80.0

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -59,6 +59,6 @@ zbar-rust = "0.0.23"
 dead_code = "deny"
 
 [workspace.lints.clippy]
-pedantic = "deny"
-nursery = "deny"
+pedantic = { level = "deny", priority = -1 }
+nursery = { level = "deny", priority = -1 }
 unwrap_used = "deny"
