--- a/apps/mark-scan/backend/tsconfig.build.json
+++ b/apps/mark-scan/backend/tsconfig.build.json
@@ -12,6 +12,7 @@
   "references": [
     { "path": "../../../libs/auth/tsconfig.build.json" },
     { "path": "../../../libs/backend/tsconfig.build.json" },
+    { "path": "../../../libs/bmd-ballot-fixtures/tsconfig.build.json" },
     { "path": "../../../libs/ballot-interpreter/tsconfig.build.json" },
     { "path": "../../../libs/basics/tsconfig.build.json" },
     { "path": "../../../libs/custom-paper-handler/tsconfig.build.json" },
