Fix VxMark paper handler diagnostic in prod

--- a/apps/mark-scan/frontend/Makefile
+++ b/apps/mark-scan/frontend/Makefile
@@ -17,7 +17,10 @@ run-all:
 	(trap 'kill 0' SIGINT SIGHUP; make -C $(BACKEND) run & cd prodserver && node index.js)
 
 build: FORCE
-	pnpm install && pnpm --dir ../../../libs/ballot-interpreter build && pnpm build
+	pnpm install && \
+		pnpm --dir ../../../libs/ballot-interpreter build && \
+		pnpm --dir ../backend build && \
+		pnpm build
 
 bootstrap: install build
 
