--- a/libs/bmd-ballot-fixtures/package.json
+++ b/libs/bmd-ballot-fixtures/package.json
@@ -37,17 +37,20 @@
     ]
   },
   "dependencies": {
+    "@types/tmp": "0.2.4",
+    "@votingworks/basics": "workspace:*",
     "@votingworks/fixtures": "workspace:*",
+    "@votingworks/fs": "workspace:*",
+    "@votingworks/image-utils": "workspace:*",
     "@votingworks/printing": "workspace:*",
     "@votingworks/types": "workspace:*",
-    "@votingworks/ui": "workspace:*"
+    "@votingworks/ui": "workspace:*",
+    "tmp": "^0.2.1"
   },
   "devDependencies": {
     "@types/jest": "^29.5.3",
     "@types/jest-image-snapshot": "^6.4.0",
     "@types/react": "18.3.3",
-    "@votingworks/basics": "workspace:*",
-    "@votingworks/image-utils": "workspace:*",
     "eslint-plugin-vx": "workspace:*",
     "is-ci-cli": "2.2.0",
     "jest": "^29.6.2",
