--- a/libs/fixture-generators/package.json
+++ b/libs/fixture-generators/package.json
@@ -34,8 +34,10 @@
     "esbuild": "0.21.2",
     "esbuild-runner": "2.2.2",
     "js-sha256": "^0.9.0",
+    "nanoid": "^3.3.7",
     "uuid": "9.0.1",
-    "yargs": "17.7.1"
+    "yargs": "17.7.1",
+    "zod": "3.23.5"
   },
   "devDependencies": {
     "@types/jest": "^29.5.3",
@@ -50,8 +52,7 @@
     "jest-junit": "^16.0.0",
     "jest-watch-typeahead": "^2.2.2",
     "tmp": "^0.2.1",
-    "ts-jest": "29.1.1",
-    "zod": "3.23.5"
+    "ts-jest": "29.1.1"
   },
   "packageManager": "pnpm@8.3.1"
 }
