--- a/libs/image-utils/package.json
+++ b/libs/image-utils/package.json
@@ -25,6 +25,7 @@
     "@votingworks/utils": "workspace:*",
     "canvas": "2.9.1",
     "debug": "4.3.4",
+    "pdf-lib": "^1.17.1",
     "pdfjs-dist": "2.3.200",
     "tmp": "^0.2.1"
   },
