--- a/libs/hmpb/tsconfig.build.json
+++ b/libs/hmpb/tsconfig.build.json
@@ -14,6 +14,7 @@
     { "path": "../ballot-encoder/tsconfig.build.json" },
     { "path": "../eslint-plugin-vx/tsconfig.build.json" },
     { "path": "../fixtures/tsconfig.build.json" },
+    { "path": "../image-utils/tsconfig.build.json" },
     { "path": "../types/tsconfig.build.json" },
     { "path": "../ui/tsconfig.build.json" },
     { "path": "../utils/tsconfig.build.json" }
