Handle unhandled exceptions/promise rejects in VxSuite servers

--- a/apps/admin/frontend/Makefile
+++ b/apps/admin/frontend/Makefile
@@ -5,7 +5,9 @@ FORCE:
 install:
 
 build: FORCE
-	pnpm install && pnpm build
+	pnpm install && \
+		pnpm --dir ../backend build && \
+		pnpm build
 
 bootstrap: install build
 
