feat(converter-nh-accuvote): add `correct-definition` command

--- a/libs/converter-nh-accuvote/package.json
+++ b/libs/converter-nh-accuvote/package.json
@@ -38,6 +38,7 @@
     "luxon": "^3.0.0",
     "pdf-lib": "^1.17.1",
     "tmp": "^0.2.1",
+    "xml-formatter": "^3.6.3",
     "zod": "3.14.4"
   },
   "devDependencies": {
