--- a/apps/design/backend/package.json
+++ b/apps/design/backend/package.json
@@ -44,6 +44,7 @@
     "@votingworks/db": "workspace:*",
     "@votingworks/grout": "workspace:*",
     "@votingworks/hmpb": "workspace:*",
+    "@votingworks/logging": "workspace:*",
     "@votingworks/printing": "workspace:*",
     "@votingworks/types": "workspace:*",
     "@votingworks/ui": "workspace:*",
