--- a/libs/db/tsconfig.build.json
+++ b/libs/db/tsconfig.build.json
@@ -10,6 +10,7 @@
   },
   "references": [
     { "path": "../basics/tsconfig.build.json" },
+    { "path": "../logging/tsconfig.build.json" },
     { "path": "../eslint-plugin-vx/tsconfig.build.json" },
     { "path": "../utils/tsconfig.build.json" }
   ]
